[package]
name = "perfcnt"
version = "0.6.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Brian Martin <bmartin@twitter.com>", "Jens Breitbart <jbreitbart@gmail.com>"]
description = "Library to configure and read hardware performance counters in rust."
homepage = "https://github.com/gz/rust-perfcnt"
repository = "https://github.com/gz/rust-perfcnt"
documentation = "http://gz.github.io/rust-perfcnt/perfcnt/"
readme = "README.md"
keywords = ["performance", "counter", "events", "pmu", "perf"]
license = "MIT"
edition = '2018'

[dependencies]
cfg-if = "1.0.0"
bitflags = "1.2.1"
libc = "0.2"
raw-syscall-base = { git = "https://github.com/abusse/raw-syscall-base", branch = "rfc2873-asm" }
mmap = "0.1.*"
byteorder = "1.3.4"
nom = "4.2.3"
phf = "0.8.0"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = { version = "0.34.0", features = ["performance-counter"] }

[[bin]]
name = "perfcnt-list"
path = "src/bin/list.rs"

[[bin]]
name = "perfcnt-parse"
path = "src/bin/parse.rs"

[[bin]]
name = "perfcnt-stats"
path = "src/bin/stats.rs"
